# ComfyUI_InfiniteYou

./: README.md  __init__.py  infuse_net.py  nodes.py  pyproject.toml  requirements.txt  resampler.py  utils.py
example_workflows/: infinite_you_workflow.json  multi_id_infinite_you_workflow.json
